--- a/src/config/default_config.toml
+++ b/src/config/default_config.toml
@@ -67,6 +67,12 @@ relative = false
 "a" = { ContinuousRegion = { diagonals_allowed = true } }
 "" = { FixedNumberOfCells = { number_of_cells = 1, jump = "DirectionAsStride" }}
 
+[keymaps.motion_repeats]
+"" = { count = "FromKeystrokes", motion = "FromKeystrokes" }
+
+[keymaps.counts]
+"" = "TypeDecimal"
+
 [keymaps.directions]
 "h" = [0, -1]
 "j" = [1, 0]
