--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ default-run = "upaint"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ratatui = { version = "0.23.0", features = ["all-widgets", "serde"] }
+ratatui = { version = "0.29.0", features = ["all-widgets", "serde", "unstable-rendered-line-info"] }
+tui-textarea = "0.7.0"
 anyhow = "1.0.75"
-crossterm = { version = "0.27.0", features = ["serde"] }
+crossterm = { version = "0.28.1", features = ["serde"] }
 clap = { version= "4.4.2", features = ["derive"] }
 # config = "0.13.3"
 config = { git = "https://github.com/sigurdo/config-rs.git" }
@@ -17,7 +18,6 @@ serde = { version = "1.0.188", features = ["derive"] }
 # toml = "0.8.0"
 toml = { git = "https://github.com/sigurdo/toml-rs.git" }
 serde_json = "1.0.117"
-ratatui-textarea = "0.3.2"
 hsv = "0.1.1"
 prisma = "0.1.1"
 angular-units = "0.2.4"
