--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ bitflags = "2.5.0"
 enum_dispatch = "0.3.13"
 derive_more = { version = "1.0.0", features = ["full"] }
 as-any = "0.3.1"
-upaint_derive = { version = "0.1.0", path = "upaint_derive" }
+# upaint_derive = { version = "0.1.0", path = "upaint_derive" }
 keystrokes_parsing = { path = "keystrokes_parsing" }
 nestify = "0.3.3"
 notify = { version = "6.1.1", features = ["serde"] }
