--- a/src/config/default_config.toml
+++ b/src/config/default_config.toml
@@ -41,6 +41,7 @@ handler = "Action"
 base_keymaps = ["n"]
 
 [input_mode.i.keymaps.actions]
+"<BS>" = { MoveCursorBackInsertChar = { ch = " " }}
 "" = { InsertCharMoveCursor = {}}
 
 [input_mode.c]
@@ -69,6 +70,7 @@ base_keymaps = ["i"]
 [input_mode.n.keymaps.actions]
 ":" = { "ModeCommand" = { mode = "c" } }
 "i" = { ModeInsert = { jump = "Diagonals", mode = "i" }}
+"I" = { ModeInsert = { jump = "NoJump", mode = "i" }}
 "gc" = { "ModeColorPicker" = { mode = "p" } }
 "gp" = { "Pipette" = { slot = "Active" }}
 "v" = { ModeVisualRect = { mode = "v" } }
@@ -148,9 +150,13 @@ base_keymaps = ["i"]
 
 [input_mode.n.keymaps.directions]
 "h" = [0, -1]
+"<Left>" = [0, -1]
 "j" = [1, 0]
+"<Down>" = [1, 0]
 "k" = [-1, 0]
+"<Up>" = [-1, 0]
 "l" = [0, 1]
+"<Right>" = [0, 1]
 "y" = [-1, -2]
 "u" = [-1, -1]
 "i" = [-1, 1]
